add program pages

--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -1,243 +1,252 @@
-# 科班CS项目
+!!! note "用法"
+       1. 请先阅读[使用指南](使用指南.md)
+       2. 直接点击项目名即可进入项目详情页
+       3. 斜体代表非CS title项目
 
-## S MSCS@Stanford
+## S
 
-MSCS@Stanford
+[MSECS@Princeton](S/MSECS@Princeton.md)
 
-MSCS@UT-Austin
+[MSCS@Stanford](S/MSCS@Stanford.md)
 
-MSECS@Princeton
+[MSCS@UT-Austin](S/MSCS@UT-Austin.md)
 
-*CSE@MIT*
+[*CSE@MIT*](S/CSE@MIT.md)
 
-## A+ MSCS@CMU
+## A+
 
-MSCS@CMU
+[MSCS@CMU](A+/MSCS@CMU.md)
 
-MSCS@UCLA
+[MSCS@UCLA](A+/MSCS@UCLA.md)
 
-MCIS@UPenn
+[MCIS@UPenn](A+/MCIS@UPenn.md)
 
-*CSE@Harvard*
+[*CSE@Harvard*](A+/CSE@Harvard.md)
 
-*DS@Harvard*
+[*DS@Harvard*](A+/DS@Harvard.md)
 
-*EE@Stanford*
+[*EE@Stanford*](A+/EE@Stanford.md)
 
-*ICME@Stanford*
+[*ICME@Stanford*](A+/ICME@Stanford.md)
 
-## A MCDS@CMU
+## A
 
-MCDS@CMU
+[MCDS@CMU](A/MCDS@CMU.md)
 
-MSCV@CMU
+[MIIS@CMU](A/MIIS@CMU.md)
 
-MSML@CMU
+[MSAII@CMU](A/MSAII@CMU.md)
 
-MIIS@CMU
+[MSCV@CMU](A/MSCV@CMU.md)
 
-MSAII@CMU
+[MSML@CMU](A/MSML@CMU.md)
 
-MSCS@Yale
+[CS Meng@Cornell](A/CS Meng@Cornell.md)
 
-CS Meng@Cornell
+[MSCS@Yale](A/MSCS@Yale.md)
 
-*MS&E@Stanford*
+[*MS&E@Stanford*](A/MS&E@Stanford.md)
 
-*DS@UPenn*
+[*DS@UPenn*](A/DS@UPenn.md)
 
-## A- MSCS@GaTech
+## A-
 
-MSCS@GaTech
+[EECS Meng@Berkeley](A-/EECS Meng@Berkeley.md)
 
-EECS Meng@Berkeley
+[MSIN@CMU](A-/MSIN@CMU.md)
 
-MSIN@CMU
+[MSCS@Duke](A-/MSCS@Duke.md)
 
-CS75@UCSD
+[MSCS@GaTech](A-/MSCS@GaTech.md)
 
-MSCS@Duke
+[CS75@UCSD](A-/CS75@UCSD.md)
 
-MMath-course@Waterloo
+[MMath-course@Waterloo](A-/MMath-course@Waterloo.md)
 
-*ECE@UT Austin*
+[*ECE@CMU*](A-/ECE@CMU.md)
 
-*ECE@CMU*
+[*ECE@UT Austin*](A-/ECE@UT Austin.md)
 
-## B+ MCS@UIUC
+## B+
 
-MCS@UIUC
+[ScM CS@Brown](B+/ScM CS@Brown.md)
 
-CMCS@Cornell Tech
+[MSCS@Columbia](B+/MSCS@Columbia.md)
 
-ScM CS@Brown
+[CM@Cornell Tech](B+/CM@Cornell Tech.md)
 
-MSCS@Columbia
+[CS@Cornell Tech](B+/CS@Cornell Tech.md)
 
-MSCSE@UMich
+[MCS@UIUC](B+/MCS@UIUC.md)
 
-MScAc@UofT
+[MSCSE@UMich](B+/MSCSE@UMich.md)
 
-*MDSAI@Waterloo*
+[MScAc@UofT](B+/MScAc@UofT.md)
 
-ECE Meng@UBC
+[*ECE Meng@UBC*](B+/ECE Meng@UBC.md)
 
+[*MDSAI@Waterloo*](B+/MDSAI@Waterloo.md)
 
-##B SESV@CMU
+## B
 
-SESV@CMU
+[SESV@CMU](B/SESV@CMU.md)
 
-CSE@GaTech
+[MSCS@Dartmouth](B/MSCS@Dartmouth.md)
 
-MSCS@Dartmouth
+[CSE@GaTech](B/CSE@GaTech.md)
 
-MSCS@NWU
+[MSCS@NWU](B/MSCS@NWU.md)
 
-MSCS@UCSB
+[MSCS@UCSB](B/MSCS@UCSB.md)
 
-*CSDA@Dartmouth*
+[*MISM@CMU*](B/MISM@CMU.md)
 
-*ECE@GaTech*
+[*DS@Columbia*](B/DS@Columbia.md)
 
-*DS@Columbia*
+[*CSDA@Dartmouth*](B/CSDA@Dartmouth.md)
 
-*DS@UMich*
+[*ECE@GaTech*](B/ECE@GaTech.md)
 
-*ECE Meng@UIUC*
+[*ECE Meng@UIUC*](B/ECE Meng@UIUC.md)
 
-*MISM@CMU*
+[*DS@UMich*](B/DS@UMich.md)
 
-## B- MCS@Rice
+## B-
 
-MCS@Rice
+[MSE-SS@CMU](B-/MSE-SS@CMU.md)
 
-CS-PMP@UWM
+[MSCS@NYU Courant](B-/MSCS@NYU Courant.md)
 
-MSE-SS@CMU
+[MCS@Rice](B-/MCS@Rice.md)
 
-MCS@UCI
+[MSc@SFU](B-/MSc@SFU.md)
 
-MSCS@NYU Courant
+[MCS@TAMU](B-/MCS@TAMU.md)
 
-CS28@USC
+[MCS@UCI](B-/MCS@UCI.md)
 
-MSc@SFU
+[CS28@USC](B-/CS28@USC.md)
 
-EC82@UCSD
+[CS-PMP@UWM](B-/CS-PMP@UWM.md)
 
-MCS@TAMU
+[*MSIM@CMU*](B-/MSIM@CMU.md)
 
-*ECE@Duke*
+[*MSMITE@CMU*](B-/MSMITE@CMU.md)
 
-*ECE Meng@Waterloo*
+[*ECE MEng@Cornell*](B-/ECE MEng@Cornell.md)
 
-*ECE Meng@UofT*
+[*ECE@Duke*](B-/ECE@Duke.md)
 
-*MSMITE@CMU*
+[*MEng@UCLA*](B-/MEng@UCLA.md)
 
-*EC79@UCSD*
+[*EC79@UCSD*](B-/EC79@UCSD.md)
 
-*EC93@UCSD*
+[*EC82@UCSD*](B-/EC82@UCSD.md)
 
-*MSIM@CMU*
+[*EC93@UCSD*](B-/EC93@UCSD.md)
 
-*MEng@UCLA*
+[*ECE Meng@UofT*](B-/ECE Meng@UofT.md)
 
-*ECE MEng@Cornell*
+[*ECE Meng@Waterloo*](B-/ECE Meng@Waterloo.md)
 
-## C+ MSCS@NYU Tandon
+## C+
 
-MSECS@JHU
+[MSECS@JHU](C+/MSECS@JHU.md)
 
-MPCS@UChicago
+[CS General@NEU](C+/CS General@NEU.md)
 
-MSCS@NYU Tandon
+[MSCS@NYU Tandon](C+/MSCS@NYU Tandon.md)
 
-CS General@NEU
-
+[MPCS@UChicago](C+/MPCS@UChicago.md)
 
 ## C
 
-MSCS@UF
+[MSCSE@OSU](C/MSCSE@OSU.md)
 
-MSCS@UCD
+[MSCSE@PSU](C/MSCSE@PSU.md)
 
-MSCS@UCSC
+[MSCS@UCD](C/MSCS@UCD.md)
 
-MSCS@WUSTL
+[MSWE@UCI](C/MSWE@UCI.md)
 
-MSCS@UMass
+[NetSys@UCI](C/NetSys@UCI.md)
 
-MSCS@UVa
+[MSCS@UCSC](C/MSCS@UCSC.md)
 
-MCS@UVa
+[MSCS@UF](C/MSCS@UF.md)
 
-MSWE@UCI
+[MSCS@UMass](C/MSCS@UMass.md)
 
-NetSys@UCI
+[MSCS@UMN](C/MSCS@UMN.md)
 
-MSCSE@OSU
+[MCS@UVa](C/MCS@UVa.md)
 
-MSCSE@PSU
+[MSCS@UVa](C/MSCS@UVa.md)
 
-MSCS@UMN
+[MSCS@WUSTL](C/MSCS@WUSTL.md)
 
-*CE@NYU Tandon*
+[*ECE@Duke-Kunshan*](C/ECE@Duke-Kunshan.md)
 
-*ECE@GaTech-Shenzhen*
+[*ECE@GaTech-Shenzhen*](C/ECE@GaTech-Shenzhen.md)
 
-*ECE@Duke-Kunshan*
+[*CE@NYU Tandon*](C/CE@NYU Tandon.md)
 
 ## C-
 
-MSCS@BU
+[MSCS@Brandeis](C-/MSCS@Brandeis.md)
 
-MSCS@Rutgers
+[MSCS@BU](C-/MSCS@BU.md)
 
-MSCS@SBU
+[MSCS@Emory](C-/MSCS@Emory.md)
 
-MSCS@Syracuse
+[MSCS@Rutgers](C-/MSCS@Rutgers.md)
 
-MSCS@Brandeis
+[MSCS@SBU](C-/MSCS@SBU.md)
 
-MSCS@Vanderbilt
+[MSCS@SCU](C-/MSCS@SCU.md)
 
-MSCS@Tufts
+[MSCS@Syracuse](C-/MSCS@Syracuse.md)
 
-MSCS@UTD
+[MSCS@Tufts](C-/MSCS@Tufts.md)
 
-MSCS@SCU
+[MSCS@UTD](C-/MSCS@UTD.md)
 
-*IS@NEU*
+[MSCS@Vanderbilt](C-/MSCS@Vanderbilt.md)
+
+[*IS@NEU*](C-/IS@NEU.md)
 
 ## D+
 
-MSCS@GWU
+[MSCS@BC](D+/MSCS@BC.md)
 
-MSCS@SIT
+[MSCS@GWU](D+/MSCS@GWU.md)
 
-MSCS@BC
+[MSCS@SIT](D+/MSCS@SIT.md)
 
 ## 陆本黑洞
 
-MSCS@Cornell
+[MSCS@Berkeley](陆本黑洞/MSCS@Berkeley.md)
 
-Traditional MSCS@UWMadison
+[MSCS@Cornell](陆本黑洞/MSCS@Cornell.md)
 
-MSCS@Purdue
+[MSCS@Purdue](陆本黑洞/MSCS@Purdue.md)
 
-# 零基础转码项目
+[MSCS@UWM](陆本黑洞/MSCS@UWM.md)
 
-CS Align@NEU
+## 零基础转码项目
 
-CS37@USC
+[MPS-IS@Cornell](零基础转码项目/MPS-IS@Cornell.md)
 
-MCIT@UPenn
+[CS Align@NEU](零基础转码项目/CS Align@NEU.md)
 
-MPCS@UChicago
+[ISB@NEU](零基础转码项目/ISB@NEU.md)
 
-ISB@NEU
+[MSCS@SCU](零基础转码项目/MSCS@SCU.md)
 
-MPS-IS@Cornell
+[MPCS@UChicago](零基础转码项目/MPCS@UChicago.md)
 
-MISM@UIUC
+[MISM@UIUC](零基础转码项目/MISM@UIUC.md)
+
+[MCIT@UPenn](零基础转码项目/MCIT@UPenn.md)
+
+[CS37@USC](零基础转码项目/CS37@USC.md)
