--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -31,13 +31,33 @@
 
 ### Pull Request（推荐）
 
+PR (Pull Request)是基于Git的协同创作方式，允许用户方便地进行贡献内容，允许维护者进行审核。
+
+下面演示通过GitHub网站进行无代码PR的最佳实践
+
 1. 点击想要更改的页面右上角的编辑图标（铅笔形状）
 
-2. 在窗口内使用Markdown语法直接进行更改
+![](images/1.png)
 
-3. 从签出的repo中向主repo（[CS-Masters-Application](https://github.com/CS-Masters-Application)/**[CS-Masters-Application.github.io](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io)**）的master分支，发起Pull Request
-4. 等待Pull Request审核通过后，主repo会自动编译内容部署到网页，不需要用户进行额外操作
-5. 再次提交更新重复步骤1即可
+2. 初次提交点击`Fork this repository`将仓库fork到自己的账户下
+
+![](images/2.png)
+
+3. 在窗口内使用Markdown语法直接进行更改，点击`Propose changes`完成更改
+
+![](images/3.png)
+
+4. 点击`Create pull request`向``CS-Masters-Application.github.io:master`分支发起Pull Request
+
+![](images/4.png)
+
+5. 点击`Create pull request`确认创建Pull Request
+
+![](images/5.png)
+
+6. 等待Pull Request审核通过后，内容会被自动编译并部署到网页，不需要用户进行额外操作。再次提交更新重复步骤1即可，第二次提交可以省略步骤2
+
+![](images\6.png)
 
 ### 通过[QQ群](https://jq.qq.com/?_wv=1027&k=Ikr0DObs)手动更新
 
@@ -49,4 +69,4 @@
 
 ### 评论区
 
-欢迎在评论区讨论，admin会精选信息编入pages
+欢迎在评论区讨论，维护者会精选信息编入pages
