--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -63,8 +63,6 @@
 
 [MMath-course@Waterloo](MMath-course@Waterloo.md)
 
-[*ECE@CMU*](ECE@CMU.md)
-
 [*ECE@UT Austin*](ECE@UT Austin.md)
 
 ## B+
@@ -82,6 +80,8 @@
 [MSCSE@UMich](MSCSE@UMich.md)
 
 [MScAc@UofT](MScAc@UofT.md)
+
+[*ECE@CMU*](ECE@CMU.md)
 
 [*ECE Meng@UBC*](ECE Meng@UBC.md)
 
@@ -222,6 +222,8 @@
 [MSCS@Cornell](MSCS@Cornell.md)
 
 [MSCS@Purdue](MSCS@Purdue.md)
+
+[MSc@UofT](MSc@UofT.md)
 
 [MSCS@UWM](MSCS@UWM.md)
 
