add uiuc msr mlt

--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -15,7 +15,13 @@
 
 ## A+
 
+[MLT@CMU](MLT@CMU.md)
+
 [MSCS@CMU](MSCS@CMU.md)
+
+[MSR@CMU](MSR@CMU.md)
+
+[CS Meng@Cornell](CS Meng@Cornell.md)
 
 [MSCS@UCLA](MSCS@UCLA.md)
 
@@ -41,7 +47,7 @@
 
 [MSML@CMU](MSML@CMU.md)
 
-[CS Meng@Cornell](CS Meng@Cornell.md)
+[MSCS@UIUC](MSCS@UIUC.md)
 
 [MSCS@Yale](MSCS@Yale.md)
 
