--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -57,7 +57,7 @@ PR (Pull Request)是基于Git的协同创作方式，允许用户方便地进行
 
 6. 等待Pull Request审核通过后，内容会被自动编译并部署到网页，不需要用户进行额外操作。再次提交更新重复步骤1即可，第二次提交可以省略步骤2
 
-	![](images\6.png)
+	![](images/6.png)
 
 ### 通过[QQ群](https://jq.qq.com/?_wv=1027&k=Ikr0DObs)手动更新
 
