--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -47,7 +47,7 @@ PR (Pull Request)是基于Git的协同创作方式，允许用户方便地进行
 
 	![](images/3.png)
 
-4. 点击`Create pull request`向``CS-Masters-Application.github.io:master`分支发起Pull Request
+4. 点击`Create pull request`向`CS-Masters-Application.github.io:master`分支发起Pull Request
 
 	![](images/4.png)
 
