--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -8,7 +8,7 @@
 
 1. 选校梯度以及项目详情页的内容会非常主观，可能与客观现实存在偏差
 2. 选校难度梯度是针对陆本而言的，产生方法是22fall申请季大家对项目难度的群体认知
-3. 很多项目因为样本过少(尤其B以下的项目)，选校梯度很可能并不准确
+3. 很多项目因为样本过少(尤其B-/C+/C的项目)，选校梯度很可能并不准确
 4. 申请人不应完全依赖本文档信息，应当参考文档信息自主决策
 
 ## 建议使用方法
