--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -3,7 +3,7 @@
        2. 直接点击项目名即可进入项目详情页
        3. 斜体代表非CS title项目
 
-## S
+## SSS
 
 [MSECS@Princeton](MSECS@Princeton.md)
 
@@ -13,7 +13,7 @@
 
 [*CSE@MIT*](CSE@MIT.md)
 
-## A+
+## SS
 
 [MLT@CMU](MLT@CMU.md)
 
@@ -35,7 +35,7 @@
 
 [*ICME@Stanford*](ICME@Stanford.md)
 
-## A
+## S
 
 [MCDS@CMU](MCDS@CMU.md)
 
@@ -55,7 +55,7 @@
 
 [*DS@UPenn*](DS@UPenn.md)
 
-## A-
+## A+
 
 [EECS Meng@Berkeley](EECS Meng@Berkeley.md)
 
@@ -71,7 +71,7 @@
 
 [*ECE@UT Austin*](ECE@UT Austin.md)
 
-## B+
+## A
 
 [ScM CS@Brown](ScM CS@Brown.md)
 
@@ -93,7 +93,7 @@
 
 [*MDSAI@Waterloo*](MDSAI@Waterloo.md)
 
-## B
+## A-
 
 [SESV@CMU](SESV@CMU.md)
 
@@ -117,7 +117,7 @@
 
 [*DS@UMich*](DS@UMich.md)
 
-## B-
+## B+
 
 [MSE-SS@CMU](MSE-SS@CMU.md)
 
@@ -155,7 +155,7 @@
 
 [*ECE Meng@Waterloo*](ECE Meng@Waterloo.md)
 
-## C+
+## B
 
 [MSECS@JHU](MSECS@JHU.md)
 
@@ -163,7 +163,7 @@
 
 [MSCS@NYU Tandon](MSCS@NYU Tandon.md)
 
-## C
+## B-
 
 [MSCSE@OSU](MSCSE@OSU.md)
 
@@ -195,7 +195,7 @@
 
 [*CE@NYU Tandon*](CE@NYU Tandon.md)
 
-## C-
+## C+
 
 [MSCS@BU](MSCS@BU.md)
 
@@ -213,7 +213,7 @@
 
 [*IS@NEU*](IS@NEU.md)
 
-## D+
+## C
 
 [MSCS@BC](MSCS@BC.md)
 
