--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -135,7 +135,7 @@
 
 [CS-PMP@UWM](CS-PMP@UWM.md)
 
-[*MSIM@CMU*](MSIM@CMU.md)
+[*MISM@CMU*](MISM@CMU.md)
 
 [*MSMITE@CMU*](MSMITE@CMU.md)
 
@@ -249,7 +249,7 @@
 
 [MPCS@UChicago](MPCS@UChicago.md)
 
-[MISM@UIUC](MISM@UIUC.md)
+[MSIM@UIUC](MSIM@UIUC.md)
 
 [MCIT@UPenn](MCIT@UPenn.md)
 
