--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -109,6 +109,8 @@
 
 [*CSDA@Dartmouth*](CSDA@Dartmouth.md)
 
+[*CGGT@UPenn*](CGGT@UPenn.md)
+
 [*ECE@GaTech*](ECE@GaTech.md)
 
 [*ECE Meng@UIUC*](ECE Meng@UIUC.md)
