--- a/docs/飞跃手册.md
+++ b/docs/飞跃手册.md
@@ -1,7 +1,5 @@
 本页面提供了部分学校的飞跃手册链接，欢迎修改此页面补充
 
 ## [上海交通大学大学飞跃手册（创作中）](https://survivesjtu.github.io/SJTU-Application/#/)
-
-## [华中科技大学大光电飞跃手册](https://hust-feiyue.github.io/)
-
+## [华中科技大学光电飞跃手册](https://hust-feiyue.github.io/)
 ## [华科生存手册（创作中）](https://1037survival.gitbook.io/)
