--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -155,6 +155,8 @@
 
 [*ECE Meng@Waterloo*](ECE Meng@Waterloo.md)
 
+[*MPS-IS@Cornell*](MPS-IS@Cornell.md)
+
 ## B
 
 [MSECS@JHU](MSECS@JHU.md)
@@ -236,8 +238,6 @@
 ## 零基础转码项目
 
 [MSCS@Brandeis](MSCS@Brandeis.md)
-
-[MPS-IS@Cornell](MPS-IS@Cornell.md)
 
 [CS Align@NEU](CS Align@NEU.md)
 
