--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -6,10 +6,17 @@
 
 ## 创作声明
 
-1. 选校梯度以及项目详情页的内容会非常主观，可能与客观现实存在偏差
-2. 选校**难度梯度**是针对陆本而言的，产生方法是22fall申请季大家对项目难度的群体认知 (注意是申请难度，不是哪个项目更好的ranking)
-3. 很多项目因为样本过少(尤其B-/C+/C的项目)，选校梯度很可能并不准确
-4. 申请人不应完全依赖本文档信息，应当参考文档信息自主决策
+1. 选校梯度以针对陆本的**录取难度**作为排序标准，产生方法是22fall申请季中贡献者们对项目难度的群体认知
+2. 选校梯度表和项目详情页的内容可能会非常主观，与客观现实存在偏差
+3. 项目的general录取难度高并不代表项目好，更确切地说并不代表项目能match申请人的读研目的
+4. 项目对申请人来讲是否是好项目，主要看项目的特点和申请人目的是否匹配。考虑因素可能包括地理位置，气候情况，治安状况，项目花销，带奖机会，生活成本，梦校情结，国外名气，回国名气，是否考公目标校，回国落户，项目口碑，项目长度，实习情况，Co-op，scheduled break，就业支持，科研机会，科研口碑，faculty规模，转博机会，往届出路，校友资源，CS title，课程质量，选课难度，workload，class size，项目氛围，国人占比，移民政策，家庭因素。多数申请人在申请初期会非常热衷于选择有梦校情结，国内外名气高的项目，但事实上这只是需要考虑因素的一小部分。在如此多的考虑因素中，申请人更应当根据自己读研的目的，或者说初心，来根据自己重视的因素，加权出对于自己最好的项目
+5. 很多项目因为样本过少(尤其B-/C+/C的项目)，选校梯度很可能并不准确
+6. 申请人不应完全依赖本文档信息，应当参考文档信息自主决策
+
+## 错误选校思维纠正
+请申请者注意一定要避免以下错误选校思维：
+1. ~~“不求最好但求最贵”~~：不考虑项目特点，认为难度高的项目就是好的项目，就是适合自己的项目
+2. ~~别人看法重于自身体验~~：不考虑自身就读体验如何，是否能通过项目达到自己的读研目的，认为应当去名气最高的学校
 
 ## 建议使用方法
 
