--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -12,12 +12,13 @@
 4. 项目对申请人来讲是否是好项目，主要看项目的特点和申请人目的是否匹配。考虑因素可能包括地理位置，气候情况，治安状况，项目花销，带奖机会，生活成本，梦校情结，国外名气，回国名气，是否考公目标校，回国落户，项目口碑，项目长度，实习情况，Co-op，scheduled break，就业支持，科研机会，科研口碑，faculty规模，转博机会，往届出路，校友资源，CS title，课程质量，选课难度，workload，class size，peer pressure，项目氛围，国人占比，移民政策，家庭因素。多数申请人在申请初期会非常热衷于选择有梦校情结，国内外名气高的项目，但事实上这只是需要考虑因素的一小部分。在如此多的考虑因素中，申请人更应当根据自己读研的目的，或者说初心，来根据自己重视的因素，加权出对于自己最好的项目
 5. 很多项目因为样本过少(尤其B-/C+/C的项目)，选校梯度很可能并不准确
 6. 申请人不应完全依赖本文档信息，应当参考文档信息自主决策
+7. 可以参考[CS选校之禅](CS选校之禅.md)中的选校思想
 
 ## 错误选校思维纠正
 请申请者注意一定要避免以下错误选校思维：
 
-1. ~~“不求最好但求最贵”~~：不考虑项目特点，认为难度高的项目就是好的项目，就是适合自己的项目
-2. ~~别人看法重于自身体验~~：不考虑自身就读体验如何，是否能通过项目达到自己的读研目的，认为应当去名气最高的学校
+1. ~~“不求最好但求最贵”~~：不考虑项目特点；认为难度高的项目就是好的项目，就是适合自己的项目。事实上很多项目只是对于陆本难度高，很多项目的难度和质量也并不匹配，更重要的是这些项目并不一定能最好地支持你的读研目的和未来规划
+2. ~~别人看法重于自身体验~~：不考虑自身就读体验如何，是否能通过项目达到自己的读研目的；认为应当选择别人认为好的项目。事实上很多人判断项目的好坏是从他们自身的读研目的和未来规划出发的，更有很多人认为好的项目就是难的项目，所以给出的评价往往是不符合你自身情况的
 
 ## 建议使用方法
 
@@ -27,7 +28,7 @@
 
 ### 选校
 
-点击列表中各个项目进入详情页，查看可能的录取偏好和项目特点。根据自己软硬背景，读研目的，未来规划（留美找工/回国就业/移民海外）综合进行考虑，选择对于自己最match的项目。
+点击列表中各个项目进入详情页，查看可能的录取偏好和项目特点。根据自己软硬背景，读研目的，未来规划（留美找工/回国就业/移民海外/零基础转码等）综合进行考虑，选择对于自己最match的项目。
 
 ### 补申
 
