--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -44,9 +44,11 @@ PR (Pull Request)是基于Git的协同创作方式，允许用户方便地进行
 
 下面演示通过GitHub网站进行无代码PR的最佳实践
 
-1. 点击想要更改的页面右上角的编辑图标（铅笔形状）
+1. 点击想要更改的页面右上角的编辑图标（铅笔形状），注意编辑选校梯度直接点击`选校梯度`页面编辑按钮
 
 	![](images/1.png)
+	
+	![](images/1-1.png)
 
 2. 初次提交点击`Fork this repository`将仓库fork到自己的账户下
 
