--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -2,7 +2,7 @@
        1. 请先阅读[使用指南](使用指南.md)
        2. 直接点击项目名即可进入项目详情页
        3. 斜体代表非CS title项目
-       4. 直接点击下方按钮进行贡献
+       4. 直接点击下方`编辑此页面`按钮进行贡献
 
 [:fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/edit/master/programs_list.yml){ .md-button .md-button--primary }
 
