--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -1,8 +1,8 @@
 !!! note "用法"
        1. 请先阅读[使用指南](使用指南.md)
-       2. 直接点击项目名即可进入项目详情页
-       3. 斜体代表非CS title项目
-       4. 直接点击下方`编辑此页面`按钮修改选校梯度
+       2. 斜体代表非CS title项目
+       3. 点击项目名即可进入项目详情页
+       4. 点击下方`编辑此页面`按钮修改选校梯度
 
 [:fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/edit/master/programs_list.yml){ .md-button .md-button--primary }
 
