--- a/docs/贡献者.md
+++ b/docs/贡献者.md
@@ -1,3 +1,5 @@
-:heart_eyes: 感谢所有[贡献者](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/graphs/contributors)们
+# 感谢所有[贡献者](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/graphs/contributors)们
 
-:old_key:	INFORMATION MATTERS.
+:heart_eyes: YOUR WORK IS APPRECIATED
+
+:key:	INFORMATION MATTERS.
