--- a/docs/内容征集.md
+++ b/docs/内容征集.md
@@ -10,7 +10,7 @@ PR (Pull Request)是基于Git的协同创作方式，允许用户方便地进行
 
 下面演示通过GitHub网站进行无代码PR的最佳实践
 
-1. 点击想要更改的页面右上角的编辑图标（铅笔形状），注意编辑选校梯度直接点击`选校梯度`页面编辑按钮
+1. 点击想要更改的页面右上角的编辑图标（铅笔形状），注意编辑选校梯度直接点击[选校梯度](选校梯度.md)页面编辑按钮
 
 	![](images/1.png)
 
