--- a/docs/赞赏计划.md
+++ b/docs/赞赏计划.md
@@ -2,9 +2,7 @@
 
 ## 赞赏计划一期
 
-用于qq①群扩容至2000人，目标金额240元
-
-![](images/赞赏计划一期.png)
+用于qq①群扩容至2000人，目标金额240元，实际金额406元，转移支付166元至赞赏计划二期。
 
 ### 赞赏者名录
 
@@ -33,3 +31,9 @@ DelluC ￥5
 Deng_Hilbert ￥10
 
 匿名大大 ￥5
+
+增肥 ￥150
+
+Boboge ￥10
+
+Eclipse ￥20
