--- a/docs/赞赏计划.md
+++ b/docs/赞赏计划.md
@@ -2,7 +2,7 @@
 
 ## 赞赏计划一期
 
-用于qq①群扩容至2000人，目标金额240元，实际金额451元，转移支付211元至赞赏计划二期。
+用于qq①群扩容至2000人，目标金额240元，实际金额452元，转移支付212元至赞赏计划二期。
 
 ### 赞赏者名录
 
@@ -41,3 +41,5 @@ Eclipse ￥20
 木槿你好 ￥5
 
 陈小宝 ￥20
+
+Ricardo Lzecson ￥1
