--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -28,8 +28,17 @@
 
 ### 选校
 
-点击列表中各个项目进入详情页，查看可能的录取偏好和项目特点。根据自己软硬背景，读研目的，未来规划（留美找工/回国就业/移民海外/零基础转码等）综合进行考虑，选择对于自己最match的项目。
+点击列表中各个项目进入详情页，查看可能的录取偏好和项目特点（详情页各条目说明见下）。根据自己软硬背景，读研目的，未来规划（留美找工/回国就业/移民海外/零基础转码等）综合进行考虑，选择对于自己最match的项目。
 
 ### 补申
 
 如遇补申阶段，可以快速在自己保底档及难度更低的档位进行再一轮选校。
+
+## 项目详情各条目说明
+
+* 录取偏好：该项目整体录取倾向
+* 代表性dp：部分典型offer或拒信的基本background
+* 网申备注：收集该项目网申系统里容易被忽视或者踩坑的点，关于基本的网申要求（GRE、托福/雅思、推荐信和申请ddl等）请至Homepage表格或项目官网查询
+* 项目特点：包括该项目科研/就业导向、课程设置、workload、class size、项目时长等信息
+* 申请季实时信息：收集short term（今年/当前申请季）的实时信息，例如今年该项目是否扩招或缩招
+* 介绍帖：征集该项目地里或者其他渠道的优质介绍帖子链接
