--- a/docs/飞跃手册.md
+++ b/docs/飞跃手册.md
@@ -1,5 +1,13 @@
-本页面提供了部分学校的飞跃手册链接，欢迎修改此页面补充
+# 内容征集 | Call for Contribution
 
-## [上海交通大学大学飞跃手册 (Under Construction)](https://survivesjtu.github.io/SJTU-Application/#/)
-## [华中科技大学光电飞跃手册](https://hust-feiyue.github.io/)
-## [华科生存手册 (Under Construction)](https://1037survival.gitbook.io/)
+本页面提供了部分有帮助的外部链接，欢迎修改此页面补充
+
+## 飞跃手册
+飞跃手册是各大高校自主编写的留学指导书以及本校案例库，其中本校的data point对选校帮助很大
+### [上海交通大学大学飞跃手册 (Under Construction)](https://survivesjtu.github.io/SJTU-Application/#/)
+### [华中科技大学光电飞跃手册](https://hust-feiyue.github.io/)
+### [华科生存手册 (Under Construction)](https://1037survival.gitbook.io/)
+
+## 其他链接
+### [TransferWiki](https://transferwiki.com/) 
+TransferWiki详细介绍了transfer相关信息，本科低年级同学可以考虑transfer
