--- a/docs/使用指南.md
+++ b/docs/使用指南.md
@@ -36,9 +36,9 @@
 
 ## 项目详情各条目说明
 
-* 录取偏好：该项目整体录取倾向
-* 代表性dp：部分典型offer或拒信的基本background
-* 网申备注：收集该项目网申系统里容易被忽视或者踩坑的点，关于基本的网申要求（GRE、托福/雅思、推荐信和申请ddl等）请至Homepage表格或项目官网查询
-* 项目特点：包括该项目科研/就业导向、课程设置、workload、class size、项目时长等信息
-* 申请季实时信息：收集short term（今年/当前申请季）的实时信息，例如今年该项目是否扩招或缩招
-* 介绍帖：征集该项目地里或者其他渠道的优质介绍帖子链接
+录取偏好：该项目整体录取倾向
+代表性dp：部分典型offer或rej的基本background
+网申备注：收集该项目网申系统里容易被忽视或者踩坑的点，关于基本的网申要求（GRE、托福/雅思、推荐信和申请ddl等）请至Homepage表格或项目官网查询
+项目特点：包括该项目科研/就业导向、课程设置、workload、class size、项目时长等信息
+申请季实时信息：收集short term（今年/当前申请季）的实时信息，例如今年该项目是否扩招或缩招
+介绍帖：征集该项目地里或者其他渠道的优质介绍帖子链接
