--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -3,7 +3,7 @@
 本页面提供了部分有帮助的外部链接，欢迎修改此页面补充
 
 ## 飞跃手册
-飞跃手册是各大高校自主编写的留学指导书以及本校案例库，其中本校的data point对选校帮助很大
+飞跃手册是各大高校自主编写的留学指导书以及本校案例库，本校data point对选校指导意义很大
 ### [上海交通大学大学飞跃手册 (Under Construction)](https://survivesjtu.github.io/SJTU-Application/#/)
 ### [华中科技大学光电飞跃手册](https://hust-feiyue.github.io/)
 ### [华科生存手册 (Under Construction)](https://1037survival.gitbook.io/)
