--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -10,4 +10,4 @@
 
 ## 其他链接
 ### [TransferWiki](https://transferwiki.com/) 
-TransferWiki详细介绍了transfer相关信息，本科低年级同学可以考虑transfer
+TransferWiki详细介绍了transfer相关信息。transfer到海本可以极大方便找工/移民/硕博申请，推荐本科低年级同学了解。
