--- a/docs/赞赏计划.md
+++ b/docs/赞赏计划.md
@@ -43,3 +43,7 @@ Eclipse ￥20
 陈小宝 ￥20
 
 Ricardo Lzecson ￥1
+
+## 赞赏计划二期
+
+用于购买域名[csmsapp.org](https://csmsapp.org)三年使用权限，目标金额$33.62，实际金额212元，flash赞助差价。
