--- a/docs/选校梯度.md
+++ b/docs/选校梯度.md
@@ -2,9 +2,9 @@
        1. 请先阅读[使用指南](使用指南.md)
        2. 斜体代表非CS title项目
        3. 点击项目名即可进入项目详情页
-       4. [:book: 选校梯度历史记录](https://githistory.xyz/CS-Masters-Application/CS-Masters-Application.github.io/blob/master/programs_list.yml)
-       5. 点击下方[ :fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/edit/master/programs_list.yml)按钮修改选校梯度
+       4. [:book: 选校梯度历史记录](https://githistory.xyz/csmsapp/csmsapp.github.io/blob/master/programs_list.yml)
+       5. 点击下方[ :fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/csmsapp/csmsapp.github.io/edit/master/programs_list.yml)按钮修改选校梯度
 
-[:fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/CS-Masters-Application/CS-Masters-Application.github.io/edit/master/programs_list.yml){ .md-button .md-button--primary }
+[:fontawesome-solid-pen-to-square: 编辑此页面](https://github.com/csmsapp/csmsapp.github.io/edit/master/programs_list.yml){ .md-button .md-button--primary }
 
 $programs_list
