--- a/docs/申请者信息收集表.md
+++ b/docs/申请者信息收集表.md
@@ -1,3 +1,8 @@
+---
+hide:
+  - navigation
+---
+
 # 申请者信息收集表
 
 <iframe className="dtable-embed" src="[https://cloud.seatable.cn/dtable/external-links/ff48695db50e48358d5b/](https://cloud.seatable.cn/dtable/external-links/ff48695db50e48358d5b/)" frameBorder="0" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
