--- a/docs/申请者信息收集表.md
+++ b/docs/申请者信息收集表.md
@@ -6,4 +6,4 @@ hide:
 
 # 申请者信息收集表
 
-<iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/" frameBorder="0" width="100%" height="auto" style="background: transparent; border: 1px solid #ccc;"></iframe>
+<iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/" frameBorder="0" width="100%" height="960" style="background: transparent; border: 1px solid #ccc;"></iframe>
