--- a/docs/提交新项目.md
+++ b/docs/提交新项目.md
@@ -2,3 +2,7 @@
 hide:
   - toc
 ---
+
+# 提交新项目
+
+<iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/8e2f99c4-6d02-476b-bf83-dd6b8b1477b5/" frameBorder="0" width="100%" height="960" style="background: transparent; border: 1px solid #ccc;"></iframe>
