--- a/docs/申请者信息收集表.md
+++ b/docs/申请者信息收集表.md
@@ -7,3 +7,5 @@ hide:
 # 申请者信息收集表
 
 <iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/" frameBorder="0" width="100%" height="960" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+[:fontawesome-solid-pen-to-square: 在SeaTable中填写](https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/){ .md-button .md-button--primary }
