--- a/docs/添加新项目.md
+++ b/docs/添加新项目.md
@@ -6,3 +6,5 @@ hide:
 # 添加新项目
 
 <iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/8e2f99c4-6d02-476b-bf83-dd6b8b1477b5/" frameBorder="0" width="100%" height="960" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+[:fontawesome-solid-pen-to-square: 在SeaTable中填写](https://cloud.seatable.cn/dtable/forms/8e2f99c4-6d02-476b-bf83-dd6b8b1477b5/){ .md-button .md-button--primary }
