--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -2,12 +2,18 @@
 
 本页面提供了部分有帮助的外部链接，欢迎修改此页面补充
 
+## 工具网站
+### [CSRankings](https://csrankings.org/)
+CSRankings根据dblp中收录顶会论文数量进行排名
+### [CS Open Rankings](https://drafty.cs.brown.edu/csopenrankings/)
+CS Open Rankings是结合了U.S. News, csrankings.org, placement rank,best paper awards进行的综合排名
+### [Computer Science Professors](https://csrankings.org/)
+Computer Science Professors收录了各校各年度新晋faculty名录和研究兴趣，方便进行POI选择
+### [TransferWiki](https://transferwiki.com/) 
+TransferWiki详细介绍了transfer相关信息。transfer到海本可以极大方便找工/移民/硕博申请，推荐本科低年级同学了解。
+
 ## 飞跃手册
 飞跃手册是各大高校自主编写的留学指导书以及本校案例库，本校data point对选校指导意义很大
 ### [上海交通大学大学飞跃手册 (Under Construction)](https://survivesjtu.github.io/SJTU-Application/#/)
 ### [华中科技大学光电飞跃手册](https://hust-feiyue.github.io/)
 ### [华科生存手册 (Under Construction)](https://1037survival.gitbook.io/)
-
-## 其他链接
-### [TransferWiki](https://transferwiki.com/) 
-TransferWiki详细介绍了transfer相关信息。transfer到海本可以极大方便找工/移民/硕博申请，推荐本科低年级同学了解。
