--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -11,6 +11,10 @@ CS Open Rankings是结合了U.S. News, csrankings.org, placement rank,best paper
 Computer Science Professors收录了各校各年度新晋faculty名录和研究兴趣，方便进行POI选择
 ### [TransferWiki](https://transferwiki.com/) 
 TransferWiki详细介绍了transfer相关信息。transfer到海本可以极大方便找工/移民/硕博申请，推荐本科低年级同学了解。
+### [awesome-phd-advice](https://github.com/pliang279/awesome-phd-advice)
+为未来和当前的博士生收集的建议
+### [awesome-cs-phd-application-advice](https://github.com/jedyang97/awesome-cs-phd-application-advice)
+为CS PhD申请者提供的建议精选列表，由互联网上的博客组成，略微偏重于AI/ML和NLP领域。
 
 ## 飞跃手册
 飞跃手册是各大高校自主编写的留学指导书以及本校案例库，本校data point对选校指导意义很大
