--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -1,6 +1,6 @@
 # 外部链接 | External Links
 
-本页面提供了部分有帮助的外部链接，欢迎修改此页面补充
+本页面提供了很多有帮助的外部链接，欢迎修改此页面补充
 
 ## 工具网站
 ### [CSRankings](https://csrankings.org/)
