--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -9,6 +9,8 @@ CSRankings根据dblp中收录顶会论文数量进行排名
 CS Open Rankings是结合了U.S. News, csrankings.org, placement rank,best paper awards进行的综合排名
 ### [Computer Science Professors](https://csrankings.org/)
 Computer Science Professors收录了各校各年度新晋faculty名录和研究兴趣，方便进行POI选择
+### [ChatGPT](https://chat.openai.com/)
+使用Instruction Tuning微调过的语言模型，可以高效高质量的支持文书润色。prompt举例 polish this: 
 ### [TransferWiki](https://transferwiki.com/) 
 TransferWiki详细介绍了transfer相关信息。transfer到海本可以极大方便找工/移民/硕博申请，推荐本科低年级同学了解。
 ### [:fontawesome-brands-github: awesome-phd-advice](https://github.com/pliang279/awesome-phd-advice)
