--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -8,6 +8,10 @@
 
 CSRankings 根据 dblp 中收录顶会论文数量进行排名
 
+### [Computer Science Open Data](https://jeffhuang.com/computer-science-open-data/)
+
+各校教授，排名，最佳论文，津贴信息
+
 ### [CS Open Rankings](https://drafty.cs.brown.edu/csopenrankings/)
 
 CS Open Rankings 是结合了 U.S. News, csrankings.org, placement rank,best paper awards 进行的综合排名
