--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -36,6 +36,10 @@ TransferWiki 详细介绍了 transfer 相关信息。transfer 到海本可以极
 
 为 CS PhD 申请者提供的建议精选列表，由互联网上的博客组成，略微偏重于 AI/ML 和 NLP 领域。
 
+### [美国签证预约时间](https://tuixue.online/visa/)
+
+北京/上海/广州/沈阳美签最早预约时间查询
+
 ## 飞跃手册
 
 飞跃手册是各大高校自主编写的留学指导书以及本校案例库，本校 data point 对选校指导意义很大
