--- a/docs/外部链接.md
+++ b/docs/外部链接.md
@@ -16,7 +16,7 @@ CSRankings 根据 dblp 中收录顶会论文数量进行排名
 
 CS Open Rankings 是结合了 U.S. News, csrankings.org, placement rank,best paper awards 进行的综合排名
 
-### [Computer Science Professors](https://csrankings.org/)
+### [Computer Science Professors](https://drafty.cs.brown.edu/csprofessors?src=csopendata)
 
 Computer Science Professors 收录了各校各年度新晋 faculty 名录和研究兴趣，方便进行 POI 选择
 
