--- a/docs/申请者信息收集表.md
+++ b/docs/申请者信息收集表.md
@@ -7,6 +7,6 @@ hide:
 
 <iframe className="dtable-embed" src="https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/" frameBorder="0" width="100%" height="960" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
-[:fontawesome-solid-database: 访问 DataPoints&copy;数据库](datapoints.md){ .md-button } [:fontawesome-solid-square-poll-horizontal: DataPoints 收集表](DataPoints收集表.md){ .md-button } [:fontawesome-solid-square-poll-horizontal: Progress 收集表](Progress收集表.md){ .md-button } [:fontawesome-solid-square-poll-horizontal: 申请者信息收集表](申请者信息收集表.md){ .md-button .md-button--primary } [:fontawesome-solid-square-poll-horizontal: 添加新项目](添加新项目.md){ .md-button }
+[:fontawesome-solid-square-poll-horizontal: DataPoints 收集表](DataPoints收集表.md){ .md-button } [:fontawesome-solid-square-poll-horizontal: Progress 收集表](Progress收集表.md){ .md-button } [:fontawesome-solid-square-poll-horizontal: 申请者信息收集表](申请者信息收集表.md){ .md-button .md-button--primary } [:fontawesome-solid-square-poll-horizontal: 添加新项目](添加新项目.md){ .md-button }
 
 [:fontawesome-solid-pen-to-square: 在 SeaTable 中填写](https://cloud.seatable.cn/dtable/forms/0b7d2ec7-d29f-4e06-bd65-3cfa01fc737e/){ .md-button .md-button--primary }
